3 September 2007: Wouter
	- Fixed error in iterator that would cause assertion failure in 
	  validator. CNAME to a NXDOMAIN response was collated into a response
	  with both a CNAME and the NXDOMAIN rcode. Added a test that the
	  rcode is changed to NOERROR (because of the CNAME).

31 August 2007: Wouter
	- can read bind trusted-keys { ... }; files, in a compatibility mode. 
	- iterator should not detach target queries that it still could need.
	  the protection against multiple outstanding queries is moved to a
	  current_query num check.
	- validator nodata, positive, referral tests.
	- dname print can print '*' wildcard.

30 August 2007: Wouter
	- fixup override date config option.
	- config options to control memory usage.
	- caught bad free of un-alloced data in worker_send error case.
	- memory accounting for key cache (trust anchors and temporary cache).
	- memory accounting fixup for outside network tcp pending waits.
	- memory accounting fixup for outside network tcp callbacks.
	- memory accounting for iterator fixed storage.
	- key cache size and slabs config options.
	- lib crypto cleanups at exit. 

29 August 2007: Wouter
	- test tool to sign rrsets for testing validator with.
	- added RSA and DSA test keys, public and private pairs, 512 bits.
	- default configuration is with validation enabled.
	  Only a trust-anchor needs to be configured for DNSSEC to work.
	- do not convert to DER for DSA signature verification.
	- validator replay test file, for a DS to DNSKEY DSA key prime and
	  positive response.

28 August 2007: Wouter
	- removed double use for udp buffers, that could fail,
	  instead performs a malloc to do the backup.
	- validator validates referral messages, by validating all the rrsets
	  and stores the rrsets in the cache. Further referral (nonRD queries)
	  replies are made from the rrset cache directly. Unless unchecked
	  rrsets are encountered, there are then validated.